<resources>
    <string name="app_name" translatable="false">RideBus</string>
    <string name="menu_item_1">Routes</string>
    <string name="menu_item_2">Stops</string>
    <string name="menu_item_3">Bookmarks</string>
    <string name="hours">h</string>
    <string name="minutes">m</string>
    <string name="bookmarks_context_menu_item_change">Change</string>
    <string name="bookmarks_context_menu_item_delete">Delete</string>
    <string name="search">Search</string>
    <string name="search_query_hint">Stops, routes</string>
    <string name="string_mapError">There is no schedule for this day.</string>
    <string name="nav_action_about">About</string>
    <string name="about_card1_message">Hey, glad to see you!</string>
    <string name="about_google_play">Rate on Google Play</string>
    <string name="about_version">App version:</string>
    <string name="about_report_intent">Report: TrackBus</string>
    <string name="about_email_intent">About: TrackBus</string>
    <string name="about_not_found_email">Not found email app :(</string>
    <string name="about_report_a_problem">Report a problem</string>
    <string name="title_activity_about">About</string>
    <string name="text_card_2">If you liked the app, feel free to contact me.</string>
    <string name="action_settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="appearance">Appearance</string>
    <string name="nav_action_settings">Settings</string>
    <string name="need_restart">Please, restart app to apply changes</string>
    <string name="postpone">Postpone</string>
    <string name="restart">Restart</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="all">All</string>
    <string name="__empty__" translatable="false" />
    <string name="app_language">Application language</string>
    <string name="general">General</string>
    <string name="about_email">Feedback by E-mail</string>
    <string name="change_day">Change day of the week</string>
    <string name="db_version">"Schedule version:"</string>
    <string name="route_info">Route information</string>
    <string name="number">Route №</string>
    <string name="special_thanks">Special thanks</string>
    <string name="gratitude">I express my gratitude to the team of the Rumblur project for providing a server (which, by the way, hosts the Minecraft server of the same name) for storing the schedule database</string>
    <string name="minecraft_rumblur">Link to the server group on VK</string>
    <string name="built_with_material_components">Build with Material Components</string>
    <string name="bug_report_summ">Send debug log to developer</string>
    <string name="bug_report">Send a bug report</string>
    <string name="debug">Debug</string>
    <string name="rate_title">Rate this app</string>
    <string name="rate_message">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="rate_positive">Rate it now</string>
    <string name="rate_remind_later">Remind me later</string>
    <string name="rate_never">No, thanks</string>
    <string name="updating_database">Updating schedule…</string>
    <string name="database_updated_successfully">Schedule updated successfully</string>
    <string name="current_version">"The current version of the schedule: "</string>
    <string name="bug_report_message">Sending a bug report will help the developers.</string>
    <string name="send">Send</string>
    <string name="log_not_found">Error log not found!</string>
    <string name="disclaimer">All information provided in the application is taken from open Internet sources and is provided in its original form.</string>
    <string name="about_telegram">Telegram channel</string>
    <string name="check_db">Check database integrity</string>
    <string name="check_server">Check the connection to the server</string>
    <string name="log">Log</string>
    <string name="server_and_db">Server and DB</string>
    <string name="check_db_summary">Check in case the application is unstable when loading the database from disk.</string>
    <string name="check_server_summary">If the application cannot update the schedule from the server.</string>
    <string name="view_log">View log</string>
    <string name="holiday_title">It seems today is a holiday!</string>
    <string name="holiday_summary">It is possible that the transport runs with changes in the route or according to the weekend schedule. For more information, please contact the bus fleet.</string>
    <string name="uh_oh">Uh oh…</string>
    <string name="database_corrupted">The database is corrupted.</string>
    <string name="success">Success</string>
    <string name="db_integrity_check">The database passed the integrity check.</string>
    <string name="server_unavailable">Connection to the server is unavailable.</string>
    <string name="succeed_response">Successfully received a response from the server.</string>
    <string name="notification_updating_description">A notification notifying you of the schedule update if there is a new version on the server.</string>
    <string name="notification_updated_description">A notification notifying you of a successful schedule update.</string>
    <string name="click_to_add_bookmark">Click to add to bookmarks</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
