<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/menu_item_1"
            android:title="@string/menu_item_1"
            android:icon="@drawable/ic_directions_bus_black_24dp" />

        <item android:id="@+id/menu_item_2"
            android:title="@string/menu_item_2"
            android:icon="@drawable/ic_store_mall_directory_black_24dp" />

        <item android:id="@+id/menu_item_3"
            android:title="@string/menu_item_3"
            android:icon="@drawable/ic_star_black_24dp" />
    </group>

    <group android:checkableBehavior="none" >
        <item
            android:id="@+id/nav_action_settings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/action_settings"/>
        <item
            android:id="@+id/nav_action_about"
            android:icon="@drawable/ic_info_white_24dp"
            android:title="@string/nav_action_about"/>
    </group>

</menu>