<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="32dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp"
    android:background="@android:color/white"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp"
    tools:ignore="Overdraw">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/text_card_2"
            android:textColor="?colorAccent"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?colorLine"/>

        <LinearLayout
            android:id="@+id/ll_card_about_2_google_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal"
            android:focusable="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="16dp"
                app:tint="?android:attr/textColorSecondary"
                android:src="@drawable/ic_shop_black_24dp"
                android:contentDescription="TODO" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="16dp"
                android:text="@string/about_google_play"
                android:textStyle="italic"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_card_about_2_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal"
            android:focusable="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="16dp"
                app:tint="?android:attr/textColorSecondary"
                android:src="@drawable/ic_email_24dp"
                android:contentDescription="TODO" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="16dp"
                android:text="@string/about_email"
                android:textStyle="italic"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_card_about_2_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal"
            android:focusable="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="16dp"
                app:tint="?android:attr/textColorSecondary"
                android:src="@drawable/ic_report_problem_black_24dp"
                android:contentDescription="TODO" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="16dp"
                android:text="@string/about_report_a_problem"
                android:textStyle="italic"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_card_about_2_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal"
            android:focusable="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="16dp"
                app:tint="?android:attr/textColorSecondary"
                android:src="@drawable/ic_new_releases_black_24dp"
                android:contentDescription="TODO" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="16dp"
                android:text="@string/more_apps"
                android:textStyle="italic"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>